--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div id="index">
         <h1 class="centered">Soy Alejandro</h1>
-        <p>Hola</p>
+        <p>Hola muchacho</p>
     </div>
 </body>
 </html>
