--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div id="index">
         <h1 class="centered">Soy Alejandro</h1>
+        <p>hola soy omelo chino</p>
     </div>
 </body>
 </html>
